<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstlaunch_scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/about_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_background_dialog"
        android:gravity="right" >

        <LinearLayout
            android:id="@+id/layout_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/Author_Info"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/main_text"
                android:textSize="14dp" />

            <de.bwulfert.widgets.Label
                android:id="@+id/label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/About_Helper"
                android:textColor="@color/main_text_lite" />

            <de.bwulfert.widgets.Label
                android:id="@+id/tv_label_firstlaunch_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/first_launch_misc" />

            <TextView
                android:id="@+id/tv_label_firstlaunch_misc_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/first_launch_misc_answer"
                android:textColor="@color/main_text_lite" />

            <de.bwulfert.widgets.Label
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/About_changelog" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/About_TextView_ReleaseNotes"
                android:textColor="@color/main_text_lite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp" >

            <ImageView
                android:id="@+id/image_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/store"
                android:src="@drawable/playfavicon" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/twitter"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/paypal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/paypal"
                android:src="@drawable/paypal" />

            <ImageView
                android:id="@+id/xda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:contentDescription="@string/xda"
                android:src="@drawable/xda" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>