<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/valueEditScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_background"
    android:gravity="left"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/add_key_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text"
        android:textSize="20dp" />

    <de.bwulfert.widgets.Label
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvHeader"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/ValueEdit_TextView_Description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text"
        android:textSize="@dimen/textSizelabel" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvDescriptionLabel"
        android:layout_margin="5dp"
        android:gravity="left"
        android:textColor="@color/main_text" 
        android:text="@string/ValueEdit_Label_ChooseAKeyForDescription"
        />

    <de.bwulfert.widgets.Label
        android:id="@+id/Label1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvDescription"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:text="@string/ValueEdit_TextView_Values"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text"
        android:textSize="@dimen/textSizelabel" />

    <TextView
        android:id="@+id/tv_currentValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Label1"
        android:layout_marginLeft="4dp"
        android:singleLine="true"
        android:text="@string/ValueEdit_TextView_CurrentValue"
        android:textColor="@color/main_text_lite"
        android:textSize="12dp" />

    <ScrollView
        android:id="@+id/svRadioButtons"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_above="@+id/buttons"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_currentValue" >

        <RadioGroup
            android:id="@+id/rg_recommendedValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

        </RadioGroup>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <de.bwulfert.widgets.CustomButton
            android:id="@+id/bt_saveToPropFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="writeChangesToProp"
            android:text="@string/ValueEdit_Button_SaveButtonCaption"
            android:textColor="@color/main_text" />

        <de.bwulfert.widgets.CustomButton
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backToTop"
            android:text="@string/ValueEdit_Button_CancelButtonCaption"
            android:textColor="@color/main_text" />
    </LinearLayout>

</RelativeLayout>